created swager delete card
